# ai-rpg-audio-engine

./: .env.example  .gitignore  README.md  RPGSoundDesk_bootstrap.md  conftest.py  docker-compose.yml  engrun_963a0aab48d345a9a152f2ebebf2be6f.json  engrun_963a0aab48d345a9a152f2ebebf2be6f_guide_pt.md  prompt_RPGSoundDesk.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  container.py  main.py
backend/app/application/audio/: __init__.py  use_cases.py
backend/app/application/governance/: __init__.py  use_cases.py
backend/app/application/identity/: __init__.py  use_cases.py
backend/app/application/organization/: __init__.py  use_cases.py
backend/app/application/ports/: enterprise.py  event_bus.py  identity.py  repositories.py  security.py  storage.py
backend/app/application/session/: __init__.py  use_cases.py
backend/app/application/tableops/: __init__.py  use_cases.py
backend/app/core/: config.py  logging.py
backend/app/domain/audio/: __init__.py  entities.py
backend/app/domain/governance/: __init__.py  entities.py
backend/app/domain/identity/: entities.py
backend/app/domain/shared/: events.py
backend/app/domain/tableops/: __init__.py  entities.py
backend/app/infrastructure/ai/: adaptive_engine.py
backend/app/infrastructure/db/: models.py  session.py
backend/app/infrastructure/messaging/: __init__.py  in_memory_bus.py  redis_bus.py
backend/app/infrastructure/observability/: otel.py  (+1 more)
backend/tests/integration/: test_api.py
backend/tests/unit/: test_identity_use_cases.py  test_table_domain.py  test_use_cases.py
(+141 files in other folders)
